@@ -109,13 +109,14 @@ struct upnphttp {
 #define FLAG_MIME_AVI_DIVX      0x00200000
 #define FLAG_MIME_AVI_AVI       0x00400000
 #define FLAG_MIME_FLAC_FLAC     0x00800000
-#define FLAG_NO_RESIZE          0x01000000
-#define FLAG_MS_PFS		0x02000000 // Microsoft PlaysForSure client
-#define FLAG_SAMSUNG		0x04000000
-#define FLAG_AUDIO_ONLY		0x08000000
+#define FLAG_MIME_WAV_WAV       0x01000000
+#define FLAG_NO_RESIZE          0x02000000
+#define FLAG_MS_PFS             0x04000000 // Microsoft PlaysForSure client
+#define FLAG_SAMSUNG            0x08000000
+#define FLAG_AUDIO_ONLY         0x10000000
 
-#define FLAG_FREE_OBJECT_ID	0x00000001
-#define FLAG_ROOT_CONTAINER	0x00000002
+#define FLAG_FREE_OBJECT_ID     0x00000001
+#define FLAG_ROOT_CONTAINER     0x00000002
 
 /* New_upnphttp() */
 struct upnphttp *
